modified:   .idea/gradle.xml 	modified:   .idea/misc.xml 	modified:   .idea/modules.xml 	modified:   .idea/vcs.xml 	deleted:    Hoard.iml 	modified:   app/app.iml 	modified:   app/src/main/java/com/andrewma/hoard/MainActivity.java 	modified:   app/src/main/java/com/andrewma/hoard/data/parse/ParseDataSource.java 	modified:   app/src/main/java/com/andrewma/hoard/scan/ScanFragment.java 	modified:   app/src/main/res/layout/fragment_scan.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -81,6 +81,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerRecent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:spinnerMode="dropdown"
+        />
+
     <ImageButton
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -99,6 +110,7 @@
             android:text="Small Text"
             android:id="@+id/version"
             android:layout_gravity="right" />
+
     </RelativeLayout>
 
 </LinearLayout>
