modified:   .idea/gradle.xml 	modified:   .idea/misc.xml 	modified:   .idea/modules.xml 	modified:   .idea/vcs.xml 	deleted:    Hoard.iml 	modified:   app/app.iml 	modified:   app/src/main/java/com/andrewma/hoard/MainActivity.java 	modified:   app/src/main/java/com/andrewma/hoard/data/parse/ParseDataSource.java 	modified:   app/src/main/java/com/andrewma/hoard/scan/ScanFragment.java 	modified:   app/src/main/res/layout/fragment_scan.xml 	modified:   app/src/main/res/values/strings.xml
	modified:   .idea/vcs.xml
	modified:   app/src/main/java/com/andrewma/hoard/scan/ScanFragment.java

	modified:   app/src/main/java/com/andrewma/hoard/data/parse/ParseDataSource.java
	modified:   app/src/main/java/com/andrewma/hoard/scan/ScanFragment.java
	modified:   app/src/main/res/layout/fragment_scan.xml

	modified:   app/src/main/java/com/andrewma/hoard/devicelist/DeviceListAdapter.java
	modified:   app/src/main/res/layout/fragment_device_list_item.xml

	modified:   app/src/main/java/com/andrewma/hoard/data/parse/ParseDataSource.java

	modified:   app/src/main/java/com/andrewma/hoard/scan/ScanFragment.java

Rebase of Geekon changes for Hoard.

--- a/app/src/main/res/layout/fragment_device_list_item.xml
+++ b/app/src/main/res/layout/fragment_device_list_item.xml
@@ -23,4 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Jan 1"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/checkoutDate" />
 </LinearLayout>
